--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -62,10 +62,28 @@ a:hover, .link:hover,
 	cursor: default;
 }
 
-.mouseOver, .selectedItem, .selectorMarker, .cmdLinkIcon,
-#helpLink, #settingsLink, .link, #songInfoHeader a, .songInfoText a {
+.mouseOver, .selectedItem, .selectorMarker, #helpLink, #settingsLink, .link, #songInfoHeader a, .songInfoText a {
 	cursor: pointer;
 }
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 1){
+                                       .cmdLinkIcon {
+                                                     width: 35px;
+                                                     height: 35px;
+                                                     cursor: pointer;
+                                                     }
+                                       }
+
+.cmdLinkIcon {
+              width: 20px;
+              height: 20px;
+              cursor: pointer;
+             }
+
+             
 
 .defaultCursor {
 	cursor: default;
